--- a/rpsgame.css
+++ b/rpsgame.css
@@ -21,7 +21,7 @@ h1{
 }
 
 .content{
-    background-color: #403c32;
+    background-color: #333332;
     color: white;
     flex: 1;
     text-align: center;
@@ -58,7 +58,7 @@ h1{
 .signal{
     width: 150px;
     height: 150px;
-    background-color: lightgray;
+    background-color: #70706f;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -67,10 +67,31 @@ h1{
     text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
 }
 
+.signal:hover{
+    background-color: lightgrey;
+}
 
 .footer{
     background-color: black;
     color: white;
     margin: 0;
     text-align: center;
+}
+
+.game-over{
+    position: absolute;
+    top: 42%;
+    left: 35%;
+    border:  3px soild black;
+    width: 400px;
+    height: 200px;
+    background-color: #70706f;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+    border-radius: 3px;
+    visibility: hidden;
 }
