--- a/rpsgame.css
+++ b/rpsgame.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 0;
     height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -14,6 +15,7 @@ body{
     padding: 25px;
     text-align: center;
     font-size: 32px;
+    width: 100%;
 }
 
 h1{
@@ -25,44 +27,45 @@ h1{
     color: white;
     flex: 1;
     text-align: center;
+    width: 100%;
 }
 
 .battle, .weapons{
     display: flex;
     justify-content: center;
-    margin: 20px 0;
-    padding: 20px 0;
+    margin: 2em 0;
+    padding: 2em 0;
 }
 
 .battle{
-    gap: 100px;
+    gap: 5em;
 }
 
 .result {
     margin: 20px;
-    gap: 100px;
+    gap: 1em;
 }
 .result div{
-    font-size: 55px;
+    font-size: 3em;
     text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
     margin-bottom: 10px;
 }
 
 .weapons{
     justify-content: center;
-    gap: 100px;
+    gap: 7em;
     
     
 }
 
 .signal{
-    width: 150px;
-    height: 150px;
+    max-width: 3em;
+    padding: 1em;
     background-color: #70706f;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: 1rem;
     font-size: 55px;
     text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
 }
@@ -76,13 +79,14 @@ h1{
     color: white;
     margin: 0;
     text-align: center;
+    width: 100%;
 }
 
 .game-over{
     position: absolute;
     top: 42%;
     left: 35%;
-    border:  3px soild black;
+    border:  3px solid black;
     width: 400px;
     height: 200px;
     background-color: #70706f;
@@ -94,4 +98,27 @@ h1{
     font-size: 35px;
     border-radius: 3px;
     visibility: hidden;
+    box-shadow: 5px 10px 8px #888888;
+    z-index: 101;
 }
+#overlay-div{
+    display: none;
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(90, 90, 90, 0.5);
+}
+
+@media (max-width: 1000px) {
+    body{
+
+       background-color: rebeccapurple;
+ 
+    }
+    
+    
+    
+    }  
