--- a/rpsgame.css
+++ b/rpsgame.css
@@ -15,7 +15,8 @@ body{
     padding: 25px;
     text-align: center;
     font-size: 32px;
-    width: 100%;
+    width: auto;
+    flex: 2;
 }
 
 h1{
@@ -25,9 +26,9 @@ h1{
 .content{
     background-color: #333332;
     color: white;
-    flex: 1;
+    flex: 3;
     text-align: center;
-    width: 100%;
+    width: auto;
 }
 
 .battle, .weapons{
@@ -53,21 +54,20 @@ h1{
 
 .weapons{
     justify-content: center;
-    gap: 7em;
+    align-items: center;
+    gap: 5em;
     
     
 }
 
 .signal{
-    max-width: 3em;
+    
     padding: 1em;
     background-color: #70706f;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     border-radius: 1rem;
-    font-size: 55px;
+    font-size: 3rem;
     text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
+    max-width: 5em;
 }
 
 .signal:hover{
@@ -79,16 +79,16 @@ h1{
     color: white;
     margin: 0;
     text-align: center;
-    width: 100%;
+    flex: 1;
 }
 
 .game-over{
-    position: absolute;
-    top: 42%;
-    left: 35%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border:  3px solid black;
-    width: 400px;
-    height: 200px;
+    max-width: 500px;
     background-color: #70706f;
     color: white;
     display: flex;
@@ -100,6 +100,7 @@ h1{
     visibility: hidden;
     box-shadow: 5px 10px 8px #888888;
     z-index: 101;
+    padding: 1em;
 }
 #overlay-div{
     display: none;
@@ -112,13 +113,11 @@ h1{
     background: rgba(90, 90, 90, 0.5);
 }
 
-@media (max-width: 1000px) {
-    body{
+@media (max-width: 750px) {
 
-       background-color: rebeccapurple;
- 
+    .weapons{
+        flex-direction: column;
+        gap: 3em;
+
     }
-    
-    
-    
     }  
